# engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
scripts/: clean-build.ps1  clean-dependencies.ps1  install-dependencies.ps1
shaders/: triangle.vert
source/: CMakeLists.txt  common.hpp  engine.cpp  engine.hpp  main.cpp  main.hpp
